2007-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/application_map.hh: New file.

2007-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (setup::config_string): Renamed from
	config_get_string.
	(setup::config_int): Renamed from config_get_int.
	(setup::config_double): Renamed from config_get_double.

2007-10-19  Örjan Ekeberg  <orjan@nada.kth.se>

	* music/runtime.hh, runtime.cc, music/setup.hh, setup.cc:
	Replace C MPI calls to their equivalent C++ versions.

2007-10-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, setup.cc (setup::config_get_string,
	setup::config_get_int, setup::config_get_double, setup::is_port,
	setup::port_size): New methods.

	* array_data.cc, music/array_data.hh: Renamed from arraydata.cc,
	music/arraydata.hh.

	* linear_index.cc, music/linear_index.hh: Renamed from
	linearindex.cc, music/linearindex.hh.

	* arraydata.cc, linearindex.cc, music/arraydata.hh,
	music/linearindex.hh, music/setup.hh (array_data, linear_index):
	Renamed from arraydata and linearindex everywhere.

	* Makefile.am (libmusic_la_SOURCES): Added linear_index.cc,
	music/linear_index.hh music/index_map.hh mysic/array_data.hh
	array_data.cc music/array_data.hh.
	(musicinclude_HEADERS): Added music/index_map.hh music/data_map.hh
	music/linear_index.hh music/array_data.hh.

2007-10-19  Örjan Ekeberg  <orjan@nada.kth.se>

	* Makefile.am, music/arraydata.hh, music/data_map.hh,
	music/index_map.hh, music/linearindex.hh, arraydata.cc,
	linearindex.cc: Added abstraction classes for data indexing.

	* music/setup.hh, setup.cc: Added publish method.
	Add communicator access method (duplication from runtime).

2007-09-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* runtime.cc, setup.cc: Rewritten.

	* Makefile.am, music/setup.hh, music/runtime.hh: New files.

	* music.hh: Rewritten to include header files under the music
	directory.

2007-08-17  orjan  <orjan@nada.kth.se>

	* music.hh (MUSIC): Add binding routines
